refactor: enhance thread safety in ParkourSession with concurrent collections and immutable copies
Replace `ArrayList` with `CopyOnWriteArrayList` for `activePlayers` and `HashMap` with `ConcurrentHashMap` for `lastCheckpoints` to prevent `ConcurrentModificationException` under concurrent access. Use `putIfAbsent` to avoid duplicate finish times and `Map.copyOf`/`List.copyOf` for defensive, immutable return copies instead of `Collections.unmodifiable*`. Add comprehensive test verifying zero exceptions and isolated state during concurrent multiplayer sessions.